--- a/analiza_podatkov.ipynb
+++ b/analiza_podatkov.ipynb
@@ -25,7 +25,7 @@
     "* Nogometne pozicije;\n",
     "* Starostne skupine;\n",
     "* Vrednost klubov;\n",
-    "* Narodnosti"
+    "* Narodnosti."
    ]
   },
   {
@@ -67,6 +67,14 @@
    "metadata": {},
    "source": [
     "### Top 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a6d9000",
+   "metadata": {},
+   "source": [
+    "Preden začnemo analizo naj si poglejmo prvih 10 najbolj vrednih nogometašev."
    ]
   },
   {
@@ -736,10 +744,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b23b03e7",
+   "metadata": {},
+   "source": [
+    "Zanimivo bi bilo pogledati pri kateri starosti so igralci bolj vredni."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "88a18868",
    "metadata": {},
    "source": [
-    "Zdaj bi radi analizirali igralce po starosti in za lažjo analizo bom razdelil igralce na štiri starostne skupine:\n",
+    "Radi bi analizirali igralce po starosti in za lažjo analizo bom razdelil igralce na štiri starostne skupine:\n",
     "* na dvajsetletnike ali mlajše igralce;\n",
     "* igralce med 21. in 25. letom;\n",
     "* igralce med 26. in 30. letom ter\n",
@@ -756,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "79e80cc3",
    "metadata": {},
    "outputs": [
@@ -825,7 +841,7 @@
        "3               31+                 9"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "0d51c9f3",
    "metadata": {},
    "outputs": [
@@ -898,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "9e427d46",
    "metadata": {},
    "outputs": [
@@ -968,7 +984,7 @@
        "3               31+             35.89M"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "5e795d89",
    "metadata": {},
    "outputs": [
@@ -1068,10 +1084,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "abebb148",
+   "metadata": {},
+   "source": [
+    "Še eno smiselno vprašanje je kateri klub ima bolj vredne nogometaše."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e90dbd7e",
    "metadata": {},
    "source": [
-    "Zdaj si pa analizirajmo še malo nogometne klube. Za začetek si poglejmo 10 najbolj vrednejše klube."
+    "Za začetek si poglejmo 10 najbolj vrednejše klube."
    ]
   },
   {
@@ -1818,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "ff5237a2",
    "metadata": {},
    "outputs": [
@@ -1932,7 +1956,7 @@
        "[59 rows x 2 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1967,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "3c18bacf",
    "metadata": {},
    "outputs": [
@@ -2082,7 +2106,7 @@
        "[59 rows x 2 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2127,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "bca770d4",
    "metadata": {},
    "outputs": [
@@ -2194,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "480747de",
    "metadata": {},
    "outputs": [
@@ -2248,6 +2272,14 @@
     "    plt.show()\n",
     "else:\n",
     "    print(\"⚠️ V podatkih ni stolpca 'drzava_2', zato ni mogoče analizirati dvojne nacionalnosti.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0017754a",
+   "metadata": {},
+   "source": [
+    "Rezultat me je nekoliko presenetil, saj si nisem predstavljal, da ima toliko igralcev več državljantev."
    ]
   }
  ],
